--- a/PhotoGPS/app/src/main/AndroidManifest.xml
+++ b/PhotoGPS/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
     <uses-feature android:name="android.hardware.camera2.full" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
